fix: server response and login functions refactor

--- a/production.yml
+++ b/production.yml
@@ -54,6 +54,8 @@ services:
       - ${PORT}:8000
     depends_on:
       - database
+      - redis
+      - caddy
     networks:
       - fullstack
     env_file:
