--- a/local.yml
+++ b/local.yml
@@ -36,7 +36,7 @@ services:
     volumes:
       - ./rabbit-mq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf:ro
     ports:
-      - "5672:5672"
+      - ${RABBITMQ_PORT}:5672
       - "15672:15672"
     healthcheck:
       test: [ "CMD", "rabbitmqctl", "status"]
@@ -48,30 +48,14 @@ services:
     build:
       context: .
       dockerfile: ./deployment/local/Dockerfile
-    environment:
-      # postgres
-      - DB_HOST=database
-      - DB_PORT=${DB_PORT}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_NAME=${DB_NAME}
-      - DATABASE_URL=${DATABASE_URL}
-      # Redis
-      - REDIS_PORT=${REDIS_PORT}
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
-      # api
-      - PORT=${PORT}
-      - JWT_SECRET=${JWT_SECRET}
-      # AWS S3
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_REGION=${AWS_REGION}
-      - AWS_BUCKET=${AWS_BUCKET}
     ports:
       - ${PORT}:8080
     depends_on:
       - database
+      - rabbitmq
       - redis
+    stdin_open: true
+    tty: true
     networks:
       - fullstack
     env_file:
