--- a/local.yml
+++ b/local.yml
@@ -17,6 +17,7 @@ services:
     networks:
       - fullstack
     volumes:
+      - database_postgres:/var/lib/postgresql/data
       - ./init-database.sh:/docker-entrypoint-initdb.d/init-database.sh
   redis:
     container_name: "redis"
